app/main/main.css
.button-container {
    text-align: center;
}

.message {
    display: inline-block;
    text-align: center;
}

#message-text {
    text-align: center;
    width: 16em;
}

.buttons {
    background-color: #f44336;
    border-radius: 8px;
    color: white;
    padding: 10px 24px;
    text-align: center;
    text-decoration: none;
    border: 2px solid #f44336 !important;
    font-size: 10px;
}

.buttons:hover {
    transition-duration: 0.4s;
    background-color: white;
    color: black;
}

#start {
    background-color: #4CAF50 !important;
    border: 2px solid #4CAF50 !important;
}

#start:hover {
    background-color: white !important;
    background-color: white !important;
}

.display-container {
    display: inline-block;
}

.text-display {
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 0em;
    float: left;
    background-color: white;
    border: 0.063em solid black;
    height: 25em;
    width: 22em;
    overflow-y: scroll;
}

.message-display {
    margin-top: 1em;
    margin-left: 1em;
    margin-right: 1em;
    float: right;
    background-color: white;
    border: 0.063em solid black;
    height: 25em;
    width: 22em;
    overflow-y: scroll;
}

.message {
    color: black;
}

.message-container {
    width: auto;
    text-align: center;
    border: solid 2px black;
}

.server-container {
    width: auto;
    text-align: center;
}

.make-gray {
    background-color: gray;
}

.server {
    color: black;
}

